@@ -588,12 +588,13 @@ void QtCurveClient::paintEvent(QPaintEvent *e)
     {
         QString wc(windowClass());
         if(wc==QLatin1String("W Navigator Firefox browser") ||
-            wc==QLatin1String("W Mail Thunderbird 3pane") ||
-            wc==QLatin1String("W Mail Thunderbird addressbook") ||
-            wc==QLatin1String("W Mail Thunderbird messageWindow") ||
-            wc==QLatin1String("D Calendar Thunderbird EventDialog") ||
-            wc==QLatin1String("W Msgcompose Thunderbird Msgcompose") ||
-            wc==QLatin1String("D Msgcompose Thunderbird Msgcompose")) 
+           wc==QLatin1String("W Navigator Firefox view-source") ||
+           wc==QLatin1String("W Mail Thunderbird 3pane") ||
+           wc==QLatin1String("W Mail Thunderbird addressbook") ||
+           wc==QLatin1String("W Mail Thunderbird messageWindow") ||
+           wc==QLatin1String("D Calendar Thunderbird EventDialog") ||
+           wc==QLatin1String("W Msgcompose Thunderbird Msgcompose") ||
+           wc==QLatin1String("D Msgcompose Thunderbird Msgcompose")) 
             itsMenuBarSize=QFontMetrics(QApplication::font()).height()+8;
         else if(wc.startsWith(QLatin1String("W VCLSalFrame.DocumentWindow OpenOffice.org")) ||
                 wc.startsWith(QLatin1String("W VCLSalFrame OpenOffice.org")) ||
