@@ -10,6 +10,7 @@
 6. Fix some scrollbar arrows not appearing disabled even though they should
    be - e.g. in 'About Dolphin' dialog.
 7. Support loading of png, jpeg, etc file types for background image.
+8. Fix menubar/titlebar blending for Firefox's 'page source' window.
 
 1.6.3
 -----
